project('rofl-common', 'cpp')

compiler = meson.get_compiler('cpp')

# TODO check for gcc versions 4.8.0 4.8.1 4.8.2 and only allow -O2

# TODO endianess

# dependencies
thread_dep = dependency('threads')
glog_dep = dependency('libglog', version: '>= 0.3.3')
ssl_dep = dependency('libssl')
crypto_dep = dependency('libcrypto')

deps = [ thread_dep, glog_dep, ssl_dep, crypto_dep ]

# configuration
if get_option('enable-experimental')
  conf.set('ROFL_EXPERIMENTAL', 1)
endif

add_global_arguments('-std=c++11', '-Werror', '-Wall', '-Wno-deprecated-declarations', language: 'cpp')

includes = include_directories('src')

shared_library('rofl-common',
    'src/rofl/common/crofconn.cc',
    'src/rofl/common/caddress.cc',
    'src/rofl/common/caddress.h',
    'src/rofl/common/caddrinfo.cc',
    'src/rofl/common/caddrinfo.h',
    'src/rofl/common/caddrinfos.cc',
    'src/rofl/common/caddrinfos.h',
    'src/rofl/common/cauxid.h',
    'src/rofl/common/cctlid.h',
    'src/rofl/common/cdpid.h',
    'src/rofl/common/cdptid.h',
    'src/rofl/common/cindex.h',
    'src/rofl/common/cmemory.cc',
    'src/rofl/common/cmemory.h',
    'src/rofl_common_conf.h',
    'src/rofl/common/cpacket.cc',
    'src/rofl/common/cpacket.h',
    'src/rofl/common/crandom.cc',
    'src/rofl/common/crandom.h',
    'src/rofl/common/crofbase.cc',
    'src/rofl/common/crofbase.h',
    'src/rofl/common/crofchan.cc',
    'src/rofl/common/crofchan.h',
    'src/rofl/common/crofconn.cc',
    'src/rofl/common/crofconn.h',
    'src/rofl/common/crofctl.cc',
    'src/rofl/common/crofctl.h',
    'src/rofl/common/crofdpt.cc',
    'src/rofl/common/crofdpt.h',
    'src/rofl/common/crofqueue.h',
    'src/rofl/common/crofsock.cc',
    'src/rofl/common/crofsock.h',
    'src/rofl/common/csegment.cpp',
    'src/rofl/common/csockaddr.cc',
    'src/rofl/common/csockaddr.h',
    'src/rofl/common/cthread.cpp',
    'src/rofl/common/ctimer.cpp',
    'src/rofl/common/ctimespec.cpp',
    'src/rofl/common/endian_conversion.h',
    'src/rofl_common.h',
    'src/rofl/common/openflow/cofaction.cc',
    'src/rofl/common/openflow/cofaction.h',
    'src/rofl/common/openflow/cofactions.cc',
    'src/rofl/common/openflow/cofactions.h',
    'src/rofl/common/openflow/cofaggrstats.cc',
    'src/rofl/common/openflow/cofaggrstats.h',
    'src/rofl/common/openflow/cofasyncconfig.cc',
    'src/rofl/common/openflow/cofasyncconfig.h',
    'src/rofl/common/openflow/cofbucket.cc',
    'src/rofl/common/openflow/cofbucketcounter.cc',
    'src/rofl/common/openflow/cofbucketcounter.h',
    'src/rofl/common/openflow/cofbucketcounters.cc',
    'src/rofl/common/openflow/cofbucketcounters.h',
    'src/rofl/common/openflow/cofbucket.h',
    'src/rofl/common/openflow/cofbuckets.cc',
    'src/rofl/common/openflow/cofbuckets.h',
    'src/rofl/common/openflow/cofdescstats.cc',
    'src/rofl/common/openflow/cofdescstats.h',
    'src/rofl/common/openflow/cofflowmod.cc',
    'src/rofl/common/openflow/cofflowmod.h',
    'src/rofl/common/openflow/cofflowstatsarray.cc',
    'src/rofl/common/openflow/cofflowstatsarray.h',
    'src/rofl/common/openflow/cofflowstats.cc',
    'src/rofl/common/openflow/cofflowstats.h',
    'src/rofl/common/openflow/cofgroupdescstatsarray.cc',
    'src/rofl/common/openflow/cofgroupdescstatsarray.h',
    'src/rofl/common/openflow/cofgroupdescstats.cc',
    'src/rofl/common/openflow/cofgroupdescstats.h',
    'src/rofl/common/openflow/cofgroupfeaturesstats.cc',
    'src/rofl/common/openflow/cofgroupfeaturesstats.h',
    'src/rofl/common/openflow/cofgroupmod.cc',
    'src/rofl/common/openflow/cofgroupmod.h',
    'src/rofl/common/openflow/cofgroupstatsarray.cc',
    'src/rofl/common/openflow/cofgroupstatsarray.h',
    'src/rofl/common/openflow/cofgroupstats.cc',
    'src/rofl/common/openflow/cofgroupstats.h',
    'src/rofl/common/openflow/cofhelloelem.cc',
    'src/rofl/common/openflow/cofhelloelem.h',
    'src/rofl/common/openflow/cofhelloelems.cc',
    'src/rofl/common/openflow/cofhelloelems.h',
    'src/rofl/common/openflow/cofhelloelemversionbitmap.cc',
    'src/rofl/common/openflow/cofhelloelemversionbitmap.h',
    'src/rofl/common/openflow/cofinstruction.cc',
    'src/rofl/common/openflow/cofinstruction.h',
    'src/rofl/common/openflow/cofinstructions.cc',
    'src/rofl/common/openflow/cofinstructions.h',
    'src/rofl/common/openflow/cofmatch.cc',
    'src/rofl/common/openflow/cofmatch.h',
    'src/rofl/common/openflow/cofmeterband.cc',
    'src/rofl/common/openflow/cofmeterband.h',
    'src/rofl/common/openflow/cofmeterbands.cc',
    'src/rofl/common/openflow/cofmeterbands.h',
    'src/rofl/common/openflow/cofmeterbandstatsarray.cc',
    'src/rofl/common/openflow/cofmeterbandstatsarray.h',
    'src/rofl/common/openflow/cofmeterbandstats.cc',
    'src/rofl/common/openflow/cofmeterbandstats.h',
    'src/rofl/common/openflow/cofmeterconfigarray.cc',
    'src/rofl/common/openflow/cofmeterconfigarray.h',
    'src/rofl/common/openflow/cofmeterconfig.cc',
    'src/rofl/common/openflow/cofmeterconfig.h',
    'src/rofl/common/openflow/cofmeterfeatures.cc',
    'src/rofl/common/openflow/cofmeterfeatures.h',
    'src/rofl/common/openflow/cofmeterstatsarray.cc',
    'src/rofl/common/openflow/cofmeterstatsarray.h',
    'src/rofl/common/openflow/cofmeterstats.cc',
    'src/rofl/common/openflow/cofmeterstats.h',
    'src/rofl/common/openflow/cofpacketqueue.cc',
    'src/rofl/common/openflow/cofpacketqueue.h',
    'src/rofl/common/openflow/cofpacketqueues.cc',
    'src/rofl/common/openflow/cofpacketqueues.h',
    'src/rofl/common/openflow/cofport.cc',
    'src/rofl/common/openflow/cofportdescprop.cc',
    'src/rofl/common/openflow/cofportdescprop.h',
    'src/rofl/common/openflow/cofportdescprops.cc',
    'src/rofl/common/openflow/cofportdescprops.h',
    'src/rofl/common/openflow/cofport.h',
    'src/rofl/common/openflow/cofports.cc',
    'src/rofl/common/openflow/cofports.h',
    'src/rofl/common/openflow/cofportstatsarray.cc',
    'src/rofl/common/openflow/cofportstatsarray.h',
    'src/rofl/common/openflow/cofportstats.cc',
    'src/rofl/common/openflow/cofportstats.h',
    'src/rofl/common/openflow/cofqueueprop.cc',
    'src/rofl/common/openflow/cofqueueprop.h',
    'src/rofl/common/openflow/cofqueueprops.cc',
    'src/rofl/common/openflow/cofqueueprops.h',
    'src/rofl/common/openflow/cofqueuestatsarray.cc',
    'src/rofl/common/openflow/cofqueuestatsarray.h',
    'src/rofl/common/openflow/cofqueuestats.cc',
    'src/rofl/common/openflow/cofqueuestats.h',
    'src/rofl/common/openflow/cofrole.cc',
    'src/rofl/common/openflow/cofrole.h',
    'src/rofl/common/openflow/coftablefeatureprop.cc',
    'src/rofl/common/openflow/coftablefeatureprop.h',
    'src/rofl/common/openflow/coftablefeatureprops.cc',
    'src/rofl/common/openflow/coftablefeatureprops.h',
    'src/rofl/common/openflow/coftablefeatures.cc',
    'src/rofl/common/openflow/coftablefeatures.h',
    'src/rofl/common/openflow/coftablemodprop.cc',
    'src/rofl/common/openflow/coftablemodprop.h',
    'src/rofl/common/openflow/coftablemodprops.cc',
    'src/rofl/common/openflow/coftablemodprops.h',
    'src/rofl/common/openflow/coftables.cc',
    'src/rofl/common/openflow/coftables.h',
    'src/rofl/common/openflow/coftablestatsarray.cc',
    'src/rofl/common/openflow/coftablestatsarray.h',
    'src/rofl/common/openflow/coftablestats.cc',
    'src/rofl/common/openflow/coftablestats.h',
    'src/rofl/common/openflow/coxmatch.cc',
    'src/rofl/common/openflow/coxmatches.cc',
    'src/rofl/common/openflow/coxmatches.h',
    'src/rofl/common/openflow/coxmatch.h',
    'src/rofl/common/openflow/coxmatch_output.h',
    'src/rofl/common/openflow/experimental/actions/capwap_actions.cc',
    'src/rofl/common/openflow/experimental/actions/capwap_actions.h',
    'src/rofl/common/openflow/experimental/actions/gre_actions.cc',
    'src/rofl/common/openflow/experimental/actions/gre_actions.h',
    'src/rofl/common/openflow/experimental/actions/gtp_actions.cc',
    'src/rofl/common/openflow/experimental/actions/gtp_actions.h',
    'src/rofl/common/openflow/experimental/actions/pppoe_actions.cc',
    'src/rofl/common/openflow/experimental/actions/pppoe_actions.h',
    'src/rofl/common/openflow/experimental/actions/wlan_actions.cc',
    'src/rofl/common/openflow/experimental/actions/wlan_actions.h',
    'src/rofl/common/openflow/experimental/matches/capwap_matches.cc',
    'src/rofl/common/openflow/experimental/matches/capwap_matches.h',
    'src/rofl/common/openflow/experimental/matches/gre_matches.cc',
    'src/rofl/common/openflow/experimental/matches/gre_matches.h',
    'src/rofl/common/openflow/experimental/matches/gtp_matches.cc',
    'src/rofl/common/openflow/experimental/matches/gtp_matches.h',
    'src/rofl/common/openflow/experimental/matches/pppoe_matches.cc',
    'src/rofl/common/openflow/experimental/matches/pppoe_matches.h',
    'src/rofl/common/openflow/experimental/matches/wlan_matches.cc',
    'src/rofl/common/openflow/experimental/matches/wlan_matches.h',
    'src/rofl/common/openflow/messages/cofmsg_aggr_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_aggr_stats.h',
    'src/rofl/common/openflow/messages/cofmsg_async_config.cc',
    'src/rofl/common/openflow/messages/cofmsg_async_config.h',
    'src/rofl/common/openflow/messages/cofmsg_barrier.cc',
    'src/rofl/common/openflow/messages/cofmsg_barrier.h',
    'src/rofl/common/openflow/messages/cofmsg.cc',
    'src/rofl/common/openflow/messages/cofmsg_config.cc',
    'src/rofl/common/openflow/messages/cofmsg_config.h',
    'src/rofl/common/openflow/messages/cofmsg_desc_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_desc_stats.h',
    'src/rofl/common/openflow/messages/cofmsg_echo.cc',
    'src/rofl/common/openflow/messages/cofmsg_echo.h',
    'src/rofl/common/openflow/messages/cofmsg_error.cc',
    'src/rofl/common/openflow/messages/cofmsg_error.h',
    'src/rofl/common/openflow/messages/cofmsg_experimenter.cc',
    'src/rofl/common/openflow/messages/cofmsg_experimenter.h',
    'src/rofl/common/openflow/messages/cofmsg_experimenter_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_experimenter_stats.h',
    'src/rofl/common/openflow/messages/cofmsg_features.cc',
    'src/rofl/common/openflow/messages/cofmsg_features.h',
    'src/rofl/common/openflow/messages/cofmsg_flow_mod.cc',
    'src/rofl/common/openflow/messages/cofmsg_flow_mod.h',
    'src/rofl/common/openflow/messages/cofmsg_flow_removed.cc',
    'src/rofl/common/openflow/messages/cofmsg_flow_removed.h',
    'src/rofl/common/openflow/messages/cofmsg_flow_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_flow_stats.h',
    'src/rofl/common/openflow/messages/cofmsg_group_desc_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_group_desc_stats.h',
    'src/rofl/common/openflow/messages/cofmsg_group_features_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_group_features_stats.h',
    'src/rofl/common/openflow/messages/cofmsg_group_mod.cc',
    'src/rofl/common/openflow/messages/cofmsg_group_mod.h',
    'src/rofl/common/openflow/messages/cofmsg_group_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_group_stats.h',
    'src/rofl/common/openflow/messages/cofmsg.h',
    'src/rofl/common/openflow/messages/cofmsg_hello.cc',
    'src/rofl/common/openflow/messages/cofmsg_hello.h',
    'src/rofl/common/openflow/messages/cofmsg_meter_config_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_meter_config_stats.h',
    'src/rofl/common/openflow/messages/cofmsg_meter_features_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_meter_features_stats.h',
    'src/rofl/common/openflow/messages/cofmsg_meter_mod.cc',
    'src/rofl/common/openflow/messages/cofmsg_meter_mod.h',
    'src/rofl/common/openflow/messages/cofmsg_meter_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_meter_stats.h',
    'src/rofl/common/openflow/messages/cofmsg_packet_in.cc',
    'src/rofl/common/openflow/messages/cofmsg_packet_in.h',
    'src/rofl/common/openflow/messages/cofmsg_packet_out.cc',
    'src/rofl/common/openflow/messages/cofmsg_packet_out.h',
    'src/rofl/common/openflow/messages/cofmsg_port_desc_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_port_desc_stats.h',
    'src/rofl/common/openflow/messages/cofmsg_port_mod.cc',
    'src/rofl/common/openflow/messages/cofmsg_port_mod.h',
    'src/rofl/common/openflow/messages/cofmsg_port_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_port_stats.h',
    'src/rofl/common/openflow/messages/cofmsg_port_status.cc',
    'src/rofl/common/openflow/messages/cofmsg_port_status.h',
    'src/rofl/common/openflow/messages/cofmsg_queue_get_config.cc',
    'src/rofl/common/openflow/messages/cofmsg_queue_get_config.h',
    'src/rofl/common/openflow/messages/cofmsg_queue_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_queue_stats.h',
    'src/rofl/common/openflow/messages/cofmsg_role.cc',
    'src/rofl/common/openflow/messages/cofmsg_role.h',
    'src/rofl/common/openflow/messages/cofmsg_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_stats.h',
    'src/rofl/common/openflow/messages/cofmsg_table_features_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_table_features_stats.h',
    'src/rofl/common/openflow/messages/cofmsg_table_mod.cc',
    'src/rofl/common/openflow/messages/cofmsg_table_mod.h',
    'src/rofl/common/openflow/messages/cofmsg_table_stats.cc',
    'src/rofl/common/openflow/messages/cofmsg_table_stats.h',
    'src/rofl/common/openflow/openflow10.h',
    'src/rofl/common/openflow/openflow12.h',
    'src/rofl/common/openflow/openflow13.h',
    'src/rofl/common/openflow/openflow14.h',
    'src/rofl/common/openflow/openflow.cc',
    'src/rofl/common/openflow/openflow_common.h',
    'src/rofl/common/openflow/openflow_experimental.h',
    'src/rofl/common/openflow/openflow.h',
    'src/rofl/common/openflow/openflow_rofl_exceptions.h',
    'src/rofl/common/rofcommon.h',
    include_directories: includes,
    dependencies: deps)

